<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/button" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show" />

    </LinearLayout>




        <RadioGroup
            android:id="@+id/RadioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Option1" />

            <RadioButton
                android:id="@+id/radioButtonGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Option2" />
        </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/toggleButtonEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/disabled"
            android:textOn="@string/enabled" />

    </LinearLayout>

</LinearLayout>
